Fixup twitter logo being misaligned

--- a/assets/main.css
+++ b/assets/main.css
@@ -31,7 +31,6 @@ nav {
 
 nav ul {
   list-style: none;
-  display: inline-block;
   padding: 0px;
   margin: auto;
 }
@@ -44,6 +43,7 @@ nav ul li {
 }
 
 nav ul li a img {
+  height: 100%;
   width: 100%;
 }
 
